# TravelPlanner-production

./: .gitignore  Makefile
CRAG-travelplanner/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
CRAG-travelplanner/scripts/: init_db.sql  integration_test.sh  merge_poi_exports.py  migrate_pg_to_oceanbase_hybrid.py  migrate_remaining_235.py  test_hybrid_migration_small.py
CRAG-travelplanner/seekdb_agent/: __init__.py  graph.py  state.py
CRAG-travelplanner/seekdb_agent/agents/: __init__.py  search_agent.py
CRAG-travelplanner/seekdb_agent/api/: __init__.py  main.py  schemas.py
CRAG-travelplanner/seekdb_agent/api/routers/: __init__.py  chat.py  save.py  search.py  test.py
CRAG-travelplanner/seekdb_agent/db/: __init__.py  city_aliases.py  connection.py  search.py  session.py  sparse_encoder.py
CRAG-travelplanner/seekdb_agent/llm/: __init__.py  factory.py
CRAG-travelplanner/seekdb_agent/middleware/: __init__.py  fallback.py  grading.py  refiner.py
CRAG-travelplanner/seekdb_agent/nodes/: __init__.py  ask_user.py  collector.py  generator.py  validator.py
CRAG-travelplanner/seekdb_agent/prompts/: __init__.py  ask_user.py  collector.py  evaluator.py  generator.py  refiner.py
CRAG-travelplanner/seekdb_agent/tools/: __init__.py  search.py
CRAG-travelplanner/seekdb_agent/utils/: __init__.py  geocoding.py  progress.py
CRAG-travelplanner/tests/: chat_test.html  test_agent_factory.py  test_collector_fix.py  test_db_connection.py  test_embedding_direct.py  test_integration.py  test_langchain_converters.py  test_llm_connection.py  test_middleware.py  test_nodes.py  test_performance.py  test_search_quality.py  test_search_results_flow.py
trip-mate/: .env.local.example  .gitignore
trip-mate/src/: App.js  index.js
trip-mate/src/api/: crag.js  index.js
trip-mate/src/assets/: index.js
trip-mate/src/auth/: AuthContext.js
trip-mate/src/components/: Counter.js  GlobalLoadingOverlay.js  Header.js  ItineraryTimeline.js  PlacesAutocomplete.js  PlanHistoryDrawer.js  SmallButton.js  UserProfile.js
trip-mate/src/components/AddPlaceModal/: index.js
trip-mate/src/components/attraction/: AttractionCard.js  AttractionCardSkeleton.js  AttractionCardWithPhoto.js  AttractionsList.js
trip-mate/src/components/auth/: ForgotPasswordDialog.js  LoginForm.js  LoginModal.js
trip-mate/src/components/chat/: ChatContainer.js  ChatInput.js  ChatMessage.js  POICarousel.js  PlanPreview.js  ProgressSteps.js  index.js
trip-mate/src/components/maps/: MapCanvas.js  MapPlacePopup.js  MapsProvider.js  PlaceMarker.js  index.js
trip-mate/src/components/plan/: PlanCard.js  PlanCardWithPhoto.js  PlansList.js
trip-mate/src/components/travel-setup/: Title.js  TravelBudget.js  TravelDatePicker.js  TravelPreferences.js  TravelSetupDialog.js  TravelSpecialRequests.js  TravelSummary.js  Travelers.js  index.js  travelSetupOptions.js
trip-mate/src/hooks/: useDebounced.js  useMapMarkers.js  usePlaceDetails.js  usePlacePhoto.js  usePlacesClient.js  usePlacesPredictions.js  useSSE.js
trip-mate/src/layouts/: MainLayout.js  PageContainer.js
trip-mate/src/lib/: auth.js  firebase.js
trip-mate/src/pages/Chat/: index.js
trip-mate/src/pages/Home/: index.js
trip-mate/src/pages/Setup/: index.js
trip-mate/src/routes/: MapsLayout.js  index.js
trip-mate/src/theme/: index.js
trip-mate/src/utils/: map.js
(+33 files in other folders)
